# AESJniEncrypt

./: .gitattributes  .gitignore  FigureOutJNICrash.md  LICENSE  LICENSE_CN  README.md  README_zh.md  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md
.lh/: README.md.json  README_zh.md.json
.lh/aesjni/src/main/jni/: build_libsodium_for_all_android_abi.sh.json
aesjni/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
aesjni/src/androidTest/java/com/androidyuan/aesjni/: ExampleInstrumentedTest.java  JNITest.java
aesjni/src/main/: AndroidManifest.xml
aesjni/src/main/cpp/: JNIEncrypt.c  aes.c  aes.h  check_emulator.c  checksignature.c  checksignature.h  debugger.c  debugger.h  rebuild.sh
aesjni/src/main/java/com/androidyuan/aesjni/: AESEncrypt.java  EncryptEntry.java  SWIGTYPE_p_unsigned_long_long.java  SignatureTool.java  SinalTool.java  Sodium.java  SodiumConstants.java  SodiumJNI.java
aesjni/src/main/jni/: Android.mk  Application.mk  BaseAndroid.mk  JNIEncrypt.c  OriginAndroid.mk  OriginAndroid_r13_mac.mk  OriginAndroid_r16_ubuntu.mk  OriginAndroid_r22_mac.mk  README.md  TestAndroid.mk  aead_aes256gcm.c  aes.c  aes.h  base64.c  build_libsodium_for_all_android_abi.sh  check_emulator.c  check_emulator.h  check_signature.c  check_signature.h  checksignature.c  checksignature.h  debugger.c  debugger.h  debugger_test.c  keys_generator.c  keys_generator.h  logger.h  main_unit_test.c  rebuild.sh  signaturecheck.c  signaturecheck.h  sodium.i  sodium_wrap.c  str_utils.cpp  str_utils.h  swig_gen.sh  test_in_executing.sh
aesjni/src/main/jni/sodium_include/: README.md
aesjni/src/main/res/values/: strings.xml
aesjni/src/test/java/com/androidyuan/aesjni/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/androidyuan/aesjniencrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/androidyuan/aesjniencrypt/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/androidyuan/aesjniencrypt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: androidyuan.keystore
